[ci skip] add skrub as a pypi dependence using git repo 8f8c6fc5fa968a3d6101cd91382d6758da2e3617

--- a/jupyterlite/files/notebooks/test.ipynb
+++ b/jupyterlite/files/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e612cd7c",
+   "id": "4ee4de5d",
    "metadata": {},
    "source": [
     "\n",
@@ -12,13 +12,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a797ba",
+   "id": "2d5e1e20",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sklearn\n",
     "\n",
     "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed91800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skrub\n",
+    "\n",
+    "skrub.__version__"
    ]
   }
  ],
