--- a/_sources/content/notebooks/test.ipynb
+++ b/_sources/content/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7daf5160",
+   "id": "8fa99d4b",
    "metadata": {},
    "source": [
     "\n",
@@ -12,13 +12,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "785d54e7",
+   "id": "14dc1859",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sklearn\n",
     "\n",
     "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ac6c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skrub\n",
+    "\n",
+    "skrub.__version__"
    ]
   }
  ],
