[ci skip] Workaround pyodide / polars limitations ccc2f7bf2a15adc328fd44723735f99579caf976

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b39b0c7e",
+   "id": "5c7626a1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,21 +16,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0eb2340",
-   "metadata": {},
+   "id": "94b62935",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
+    "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
     "%pip install -q holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e7c06b",
+   "id": "1317a463",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
+    "import pandas as pd\n",
+    "from pyarrow.parquet import read_table\n",
     "import skrub\n",
     "from pathlib import Path"
    ]
@@ -38,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a618dd",
+   "id": "781b3877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f9b52f",
+   "id": "2aac36ae",
    "metadata": {},
    "source": [
     "TODO: add instructions to download data manually"
@@ -67,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa023ff2",
+   "id": "365bef64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c0342b",
+   "id": "c2ecb210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +92,7 @@
     "    \"electricity_raw\",\n",
     "    pl.concat(\n",
     "        [\n",
-    "            pl.read_csv(data_file, null_values=[\"N/A\"])\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
     "            for data_file in sorted(data_source_folder.iterdir())\n",
     "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
     "            and data_file.name.endswith(\".csv\")\n",
@@ -101,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db77c44a",
+   "id": "4c327cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f18a28b0",
+   "id": "69ad1ada",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -133,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89644905",
+   "id": "e0ca7f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b723ba3",
+   "id": "65d5f55e",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "591218d5",
+   "id": "22d77c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d4c62a",
+   "id": "398f7ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +188,7 @@
     "for city_name in city_names:\n",
     "    all_city_weather_raw[city_name] = skrub.var(\n",
     "        f\"{city_name}_weather_raw\",\n",
-    "        pl.read_parquet(f\"../datasets/weather_{city_name}.parquet\"),\n",
+    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\")),\n",
     "    ).with_columns(\n",
     "        [\n",
     "            pl.col(\"time\").dt.cast_time_unit(\n",
@@ -196,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80e747ba",
+   "id": "ef263656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdc442c8",
+   "id": "b53c8d0a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,18 +223,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834f8565",
-   "metadata": {},
+   "id": "0e622563",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")\n",
-    "\n"
+    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1a4ea9",
+   "id": "a51d42e2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -249,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6012d1c",
+   "id": "38eaa0d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e85170",
+   "id": "8d2e8c32",
    "metadata": {},
    "outputs": [],
    "source": []
