--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee1e0ff7",
+   "id": "e35c377e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,21 +16,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3f78496",
-   "metadata": {},
+   "id": "a6e1b267",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
+    "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
     "%pip install -q holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8bb6230",
+   "id": "361f2f31",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
+    "import pandas as pd\n",
+    "from pyarrow.parquet import read_table\n",
     "import skrub\n",
     "from pathlib import Path"
    ]
@@ -38,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb6ee43",
+   "id": "e890a0ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562cff6e",
+   "id": "eb682aa7",
    "metadata": {},
    "source": [
     "TODO: add instructions to download data manually"
@@ -67,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c035b489",
+   "id": "27a98d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04725c50",
+   "id": "1202b265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +92,7 @@
     "    \"electricity_raw\",\n",
     "    pl.concat(\n",
     "        [\n",
-    "            pl.read_csv(data_file, null_values=[\"N/A\"])\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
     "            for data_file in sorted(data_source_folder.iterdir())\n",
     "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
     "            and data_file.name.endswith(\".csv\")\n",
@@ -101,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8629e0c7",
+   "id": "2a726a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b14524a",
+   "id": "2e44fe78",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -133,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f03f062",
+   "id": "db9b5a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211d8d08",
+   "id": "0f546e7a",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155d9a50",
+   "id": "08bf94d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a049947",
+   "id": "1baff094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +188,7 @@
     "for city_name in city_names:\n",
     "    all_city_weather_raw[city_name] = skrub.var(\n",
     "        f\"{city_name}_weather_raw\",\n",
-    "        pl.read_parquet(f\"../datasets/weather_{city_name}.parquet\"),\n",
+    "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\")),\n",
     "    ).with_columns(\n",
     "        [\n",
     "            pl.col(\"time\").dt.cast_time_unit(\n",
@@ -196,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9221df2",
+   "id": "30d3d47e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df127642",
+   "id": "69c61e42",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,18 +223,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d69d9ccd",
-   "metadata": {},
+   "id": "aaec986c",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")\n",
-    "\n"
+    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a92b9fb",
+   "id": "878da922",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -249,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4438dae",
+   "id": "9c8fcb0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7888fa6d",
+   "id": "7ef31714",
    "metadata": {},
    "outputs": [],
    "source": []
