[ci skip] One more fix 7a6ebd0e26bbd5bd8b7c81dd2a2b502ef631906a

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58693e1e",
+   "id": "b6eb74f4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32f42a6",
+   "id": "dabd0ec6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -29,13 +29,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff4d27b",
+   "id": "a6fb0e37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n",
+    "# The following 3 imports are only needed to workaround some limitations\n",
+    "# when using polars in a pyodide/jupyterlite notebook.\n",
+    "import tzdata\n",
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
+    "\n",
+    "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path"
    ]
@@ -43,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f62752",
+   "id": "150eb1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256215c2",
+   "id": "86b519e2",
    "metadata": {},
    "source": [
     "TODO: add instructions to download data manually"
@@ -72,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e19285f4",
+   "id": "e3f52cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d00bc13f",
+   "id": "5fea4a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17110e1c",
+   "id": "2f605ef4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a449325d",
+   "id": "9982778b",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -138,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0a82f5",
+   "id": "8cdc5122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef718fe8",
+   "id": "8a7ac2a5",
    "metadata": {},
    "source": [
     "\n",
@@ -159,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffdde5d9",
+   "id": "79f51ee6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230459d6",
+   "id": "0ba4b662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d588704",
+   "id": "64c00a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec84efe9",
+   "id": "1be10813",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -223,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e58e703",
+   "id": "8838ef46",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -235,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec7f5206",
+   "id": "4f206be8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -255,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7d2b92",
+   "id": "fc965000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2791e442",
+   "id": "85cb85ce",
    "metadata": {},
    "outputs": [],
    "source": []
