--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3781c4b3",
+   "id": "930c521d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2315186d",
+   "id": "fdbf665c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -29,13 +29,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333a65f3",
+   "id": "9a5dc97f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n",
+    "# The following 3 imports are only needed to workaround some limitations\n",
+    "# when using polars in a pyodide/jupyterlite notebook.\n",
+    "import tzdata\n",
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
+    "\n",
+    "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path"
    ]
@@ -43,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dff13c0",
+   "id": "b55f1d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378a8b88",
+   "id": "1bc74d47",
    "metadata": {},
    "source": [
     "TODO: add instructions to download data manually"
@@ -72,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e7fc5f",
+   "id": "c096b0a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ef948b",
+   "id": "a3f0c244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8b19b0",
+   "id": "22cfd4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119c8a46",
+   "id": "e5560657",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -138,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b331656",
+   "id": "74f26ee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16264862",
+   "id": "1c5ca85a",
    "metadata": {},
    "source": [
     "\n",
@@ -159,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1808bec",
+   "id": "7ced1969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fde635",
+   "id": "e701701f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef586c7",
+   "id": "e5fd8289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6760972b",
+   "id": "e2ce76d6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -223,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06925168",
+   "id": "0690cbe6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -235,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa6980c",
+   "id": "89c15afe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -255,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20276275",
+   "id": "946a33ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061b82bf",
+   "id": "2a416902",
    "metadata": {},
    "outputs": [],
    "source": []
