[ci skip] Structure the narrative of the feature engineering notebook cef1dd4132bfc2c6b9512356ee5c0b5414f538fb

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b6eb74f4",
+   "id": "0ec85098",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
+    "# Feature engineering for electricity load forecasting\n",
     "\n",
-    "Install extra dependencies for this notebook if needed (when running\n",
+    "## Environment setup\n",
+    "\n",
+    "We need to install some extra dependencies for this notebook if needed (when running\n",
     "jupyterlite). We need the development version of skrub to be able to use the\n",
     "skrub expressions."
    ]
@@ -16,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dabd0ec6",
+   "id": "3d3e638d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -29,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fb0e37",
+   "id": "e2bd5c3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +48,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3f55b82",
+   "metadata": {},
+   "source": [
+    "## Time range\n",
+    "\n",
+    "Let's define a hourly time range from March 23, 2021 to May 31, 2025 that\n",
+    "will be used to join the electricity load data and the weather data. The time\n",
+    "range is in UTC timezone to avoid any ambiguity when joining with the weather\n",
+    "data that is also in UTC.\n",
+    "\n",
+    "We wrap the polars dataframe in a skrub variable to benefit from the\n",
+    "built-in TableReport display in the notebook. Using the skrub expression\n",
+    "system will also be useful later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150eb1f7",
+   "id": "a9c0db2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +87,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b519e2",
+   "id": "dbc36eb3",
    "metadata": {},
    "source": [
-    "TODO: add instructions to download data manually"
+    "\n",
+    "To avoid network issues when running this notebook, the necessary data\n",
+    "files have already been downloaded and saved in the `datasets` folder.\n",
+    "See the README.md file for instructions to download the data manually\n",
+    "if you want to re-run this notebook with more recent data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f52cbc",
+   "id": "4758f050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,72 +110,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fea4a65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "electricity_raw = skrub.var(\n",
-    "    \"electricity_raw\",\n",
-    "    pl.concat(\n",
-    "        [\n",
-    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
-    "            for data_file in sorted(data_source_folder.iterdir())\n",
-    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
-    "            and data_file.name.endswith(\".csv\")\n",
-    "        ],\n",
-    "        how=\"vertical\",\n",
-    "    ),\n",
-    ")\n",
-    "electricity_raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f605ef4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "electricity = (\n",
-    "    electricity_raw.with_columns(\n",
-    "        [\n",
-    "            pl.col(\"Time (UTC)\")\n",
-    "            .str.split(by=\" - \")\n",
-    "            .list.first()\n",
-    "            .str.to_datetime(\"%d.%m.%Y %H:%M\", time_zone=\"UTC\")\n",
-    "            .alias(\"time\"),\n",
-    "        ]\n",
-    "    )\n",
-    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
-    "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
-    "    .select([\"time\", \"load_mw\"])\n",
-    ")\n",
-    "electricity"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "9982778b",
-   "metadata": {},
-   "source": [
-    "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cdc5122",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.join(electricity, on=\"time\", how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a7ac2a5",
+   "id": "6c4cf374",
    "metadata": {},
    "source": [
     "\n",
@@ -163,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f51ee6",
+   "id": "595e7311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba4b662",
+   "id": "7e52e715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64c00a47",
+   "id": "8f54be4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be10813",
+   "id": "268f44c0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -227,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8838ef46",
+   "id": "110ed202",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -239,10 +199,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f206be8",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "ee8d70e1",
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather = time\n",
@@ -257,9 +215,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d17b6f8",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "## Calendar and holidays features\n",
+    "\n",
+    "We leverage the `holidays` package to enrich the time range with some\n",
+    "calendar features such as public holidays and school holidays in France. We\n",
+    "also add some features that are useful for time series forecasting such as\n",
+    "the day of the week, the day of the year, and the hour of the day.\n",
+    "\n",
+    "Note that the `holidays` package requires us to extract the date for the\n",
+    "French timezone.\n",
+    "\n",
+    "Similarly for the calendar features: all the time features are extracted\n",
+    "from the time in the French timezone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc965000",
+   "id": "ecb5c99e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,12 +261,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "632a29b7",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "## Electricity load data\n",
+    "\n",
+    "Finally we load the electricity load data. This data will both be used as a\n",
+    "target variable but also to craft some lagged and window-aggregated features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85cb85ce",
+   "id": "2bbb12b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "electricity_raw = skrub.var(\n",
+    "    \"electricity_raw\",\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
+    "            for data_file in sorted(data_source_folder.iterdir())\n",
+    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
+    "            and data_file.name.endswith(\".csv\")\n",
+    "        ],\n",
+    "        how=\"vertical\",\n",
+    "    ),\n",
+    ")\n",
+    "electricity_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6729b39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electricity = (\n",
+    "    electricity_raw.with_columns(\n",
+    "        [\n",
+    "            pl.col(\"Time (UTC)\")\n",
+    "            .str.split(by=\" - \")\n",
+    "            .list.first()\n",
+    "            .str.to_datetime(\"%d.%m.%Y %H:%M\", time_zone=\"UTC\")\n",
+    "            .alias(\"time\"),\n",
+    "        ]\n",
+    "    )\n",
+    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
+    "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
+    "    .select([\"time\", \"load_mw\"])\n",
+    ")\n",
+    "electricity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67588fdf",
+   "metadata": {},
+   "source": [
+    "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad50c551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.join(electricity, on=\"time\", how=\"left\")"
+   ]
   }
  ],
  "metadata": {
