--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "930c521d",
+   "id": "9f3fbc23",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
+    "# Feature engineering for electricity load forecasting\n",
     "\n",
-    "Install extra dependencies for this notebook if needed (when running\n",
+    "## Environment setup\n",
+    "\n",
+    "We need to install some extra dependencies for this notebook if needed (when running\n",
     "jupyterlite). We need the development version of skrub to be able to use the\n",
     "skrub expressions."
    ]
@@ -16,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbf665c",
+   "id": "dedf704a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -29,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a5dc97f",
+   "id": "43cc89e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +48,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4da7d571",
+   "metadata": {},
+   "source": [
+    "## Time range\n",
+    "\n",
+    "Let's define a hourly time range from March 23, 2021 to May 31, 2025 that\n",
+    "will be used to join the electricity load data and the weather data. The time\n",
+    "range is in UTC timezone to avoid any ambiguity when joining with the weather\n",
+    "data that is also in UTC.\n",
+    "\n",
+    "We wrap the polars dataframe in a skrub variable to benefit from the\n",
+    "built-in TableReport display in the notebook. Using the skrub expression\n",
+    "system will also be useful later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55f1d33",
+   "id": "1ed2fa9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +87,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc74d47",
+   "id": "b9bd97cb",
    "metadata": {},
    "source": [
-    "TODO: add instructions to download data manually"
+    "\n",
+    "To avoid network issues when running this notebook, the necessary data\n",
+    "files have already been downloaded and saved in the `datasets` folder.\n",
+    "See the README.md file for instructions to download the data manually\n",
+    "if you want to re-run this notebook with more recent data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c096b0a3",
+   "id": "0feb831a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,72 +110,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3f0c244",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "electricity_raw = skrub.var(\n",
-    "    \"electricity_raw\",\n",
-    "    pl.concat(\n",
-    "        [\n",
-    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
-    "            for data_file in sorted(data_source_folder.iterdir())\n",
-    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
-    "            and data_file.name.endswith(\".csv\")\n",
-    "        ],\n",
-    "        how=\"vertical\",\n",
-    "    ),\n",
-    ")\n",
-    "electricity_raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22cfd4af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "electricity = (\n",
-    "    electricity_raw.with_columns(\n",
-    "        [\n",
-    "            pl.col(\"Time (UTC)\")\n",
-    "            .str.split(by=\" - \")\n",
-    "            .list.first()\n",
-    "            .str.to_datetime(\"%d.%m.%Y %H:%M\", time_zone=\"UTC\")\n",
-    "            .alias(\"time\"),\n",
-    "        ]\n",
-    "    )\n",
-    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
-    "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
-    "    .select([\"time\", \"load_mw\"])\n",
-    ")\n",
-    "electricity"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "e5560657",
-   "metadata": {},
-   "source": [
-    "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74f26ee2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.join(electricity, on=\"time\", how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c5ca85a",
+   "id": "d1620e88",
    "metadata": {},
    "source": [
     "\n",
@@ -163,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ced1969",
+   "id": "3af35336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e701701f",
+   "id": "0d73e78e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5fd8289",
+   "id": "675e5772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ce76d6",
+   "id": "5adc56bf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -227,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0690cbe6",
+   "id": "0c115670",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -239,10 +199,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c15afe",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "eefdd32d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather = time\n",
@@ -257,9 +215,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc09b7cc",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "## Calendar and holidays features\n",
+    "\n",
+    "We leverage the `holidays` package to enrich the time range with some\n",
+    "calendar features such as public holidays and school holidays in France. We\n",
+    "also add some features that are useful for time series forecasting such as\n",
+    "the day of the week, the day of the year, and the hour of the day.\n",
+    "\n",
+    "Note that the `holidays` package requires us to extract the date for the\n",
+    "French timezone.\n",
+    "\n",
+    "Similarly for the calendar features: all the time features are extracted\n",
+    "from the time in the French timezone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "946a33ff",
+   "id": "d8e6c766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,12 +261,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0a46953",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "## Electricity load data\n",
+    "\n",
+    "Finally we load the electricity load data. This data will both be used as a\n",
+    "target variable but also to craft some lagged and window-aggregated features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a416902",
+   "id": "d84f21f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "electricity_raw = skrub.var(\n",
+    "    \"electricity_raw\",\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
+    "            for data_file in sorted(data_source_folder.iterdir())\n",
+    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
+    "            and data_file.name.endswith(\".csv\")\n",
+    "        ],\n",
+    "        how=\"vertical\",\n",
+    "    ),\n",
+    ")\n",
+    "electricity_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96e129f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electricity = (\n",
+    "    electricity_raw.with_columns(\n",
+    "        [\n",
+    "            pl.col(\"Time (UTC)\")\n",
+    "            .str.split(by=\" - \")\n",
+    "            .list.first()\n",
+    "            .str.to_datetime(\"%d.%m.%Y %H:%M\", time_zone=\"UTC\")\n",
+    "            .alias(\"time\"),\n",
+    "        ]\n",
+    "    )\n",
+    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
+    "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
+    "    .select([\"time\", \"load_mw\"])\n",
+    ")\n",
+    "electricity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a79ec723",
+   "metadata": {},
+   "source": [
+    "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7751b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.join(electricity, on=\"time\", how=\"left\")"
+   ]
   }
  ],
  "metadata": {
