[ci skip] Handle beginning of 2025 d7924744437ba58e1fcca6e12d8cbeb93342cb34

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f3fbc23",
+   "id": "c2f89d80",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dedf704a",
+   "id": "f9fad36e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43cc89e6",
+   "id": "f1178d85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da7d571",
+   "id": "f46c1c2f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed2fa9b",
+   "id": "c961b709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9bd97cb",
+   "id": "6da6198f",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0feb831a",
+   "id": "307d5901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1620e88",
+   "id": "148d135b",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af35336",
+   "id": "3a7ca192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d73e78e",
+   "id": "3117db2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675e5772",
+   "id": "24d44873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5adc56bf",
+   "id": "39396713",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c115670",
+   "id": "9d8c023e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eefdd32d",
+   "id": "7b55f1d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc09b7cc",
+   "id": "cf16c86f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e6c766",
+   "id": "b15548a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0a46953",
+   "id": "06864724",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -276,7 +276,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84f21f6",
+   "id": "a8ed275f",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "load_data_files = [\n",
+    "    data_file\n",
+    "    for data_file in sorted(data_source_folder.iterdir())\n",
+    "    if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
+    "    and data_file.name.endswith(\".csv\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df8e331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,10 +301,10 @@
     "    \"electricity_raw\",\n",
     "    pl.concat(\n",
     "        [\n",
-    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
-    "            for data_file in sorted(data_source_folder.iterdir())\n",
-    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
-    "            and data_file.name.endswith(\".csv\")\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\", \"-\"])).drop(\n",
+    "                [\"Day-ahead Total Load Forecast [MW] - BZN|FR\"]\n",
+    "            )\n",
+    "            for data_file in load_data_files\n",
     "        ],\n",
     "        how=\"vertical\",\n",
     "    ),\n",
@@ -298,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e129f6",
+   "id": "17426427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +329,7 @@
     "            .alias(\"time\"),\n",
     "        ]\n",
     "    )\n",
-    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
+    "    .drop([\"Time (UTC)\"])\n",
     "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
     "    .select([\"time\", \"load_mw\"])\n",
     ")\n",
@@ -321,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a79ec723",
+   "id": "136a97d1",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -330,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7751b77",
+   "id": "1f0d0e73",
    "metadata": {},
    "outputs": [],
    "source": [
