--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ec85098",
+   "id": "78f2d2ac",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d3e638d",
+   "id": "2437f772",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2bd5c3a",
+   "id": "b6ee0dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f55b82",
+   "id": "e74c90e4",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9c0db2a",
+   "id": "ffc2c2e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc36eb3",
+   "id": "0ca41d87",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4758f050",
+   "id": "cd785939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4cf374",
+   "id": "1bd88155",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "595e7311",
+   "id": "f5c386ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e52e715",
+   "id": "224c21dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f54be4b",
+   "id": "5daecdec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "268f44c0",
+   "id": "3dbcea17",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110ed202",
+   "id": "3f0ec864",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8d70e1",
+   "id": "be83f616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d17b6f8",
+   "id": "479a4607",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb5c99e",
+   "id": "aecf1666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "632a29b7",
+   "id": "41c285aa",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -276,7 +276,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bbb12b0",
+   "id": "bfdb2aaa",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "load_data_files = [\n",
+    "    data_file\n",
+    "    for data_file in sorted(data_source_folder.iterdir())\n",
+    "    if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
+    "    and data_file.name.endswith(\".csv\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25b1891d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,10 +301,10 @@
     "    \"electricity_raw\",\n",
     "    pl.concat(\n",
     "        [\n",
-    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\"]))\n",
-    "            for data_file in sorted(data_source_folder.iterdir())\n",
-    "            if data_file.name.startswith(\"Total Load - Day Ahead\")\n",
-    "            and data_file.name.endswith(\".csv\")\n",
+    "            pl.from_pandas(pd.read_csv(data_file, na_values=[\"N/A\", \"-\"])).drop(\n",
+    "                [\"Day-ahead Total Load Forecast [MW] - BZN|FR\"]\n",
+    "            )\n",
+    "            for data_file in load_data_files\n",
     "        ],\n",
     "        how=\"vertical\",\n",
     "    ),\n",
@@ -298,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6729b39",
+   "id": "87a2707e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +329,7 @@
     "            .alias(\"time\"),\n",
     "        ]\n",
     "    )\n",
-    "    .drop([\"Time (UTC)\", \"Day-ahead Total Load Forecast [MW] - BZN|FR\"])\n",
+    "    .drop([\"Time (UTC)\"])\n",
     "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
     "    .select([\"time\", \"load_mw\"])\n",
     ")\n",
@@ -321,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67588fdf",
+   "id": "f77a910c",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -330,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad50c551",
+   "id": "d89161e8",
    "metadata": {},
    "outputs": [],
    "source": [
